js after G Closure compiling

--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@
             </div>
             <div class="st-stage"></div>
         </section>
-        <script src="js/main.js"></script>
+        <script src="js/main.min.js"></script>
     </body>
 </html>
